Favourites working perfectly

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,4 +3,14 @@ header {
     justify-content: space-between;
     background-color: rgb(103, 103, 255);
     color: white;
+    height: 50px;
+    text-align: center;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.links a{
+    text-decoration: none;
+    color: white;
+    padding: 10px;
 }
