--- a/src/Components/CityDisplay/CityDisplay.css
+++ b/src/Components/CityDisplay/CityDisplay.css
@@ -7,9 +7,18 @@
   margin-top: 50px;
   background-color: rgb(219, 219, 219);
   border-radius: 8px;
+  width: 500px;
 }
 
-.city-right {
+.city-display-left {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+.city-display-right {
   display: flex;
   justify-content: center;
   align-items: center;
