--- a/src/Pages/Favourites/Favourites.css
+++ b/src/Pages/Favourites/Favourites.css
@@ -1,7 +1,10 @@
 .favourites-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   margin: 10px;
+    color: #333;
 }
 
