--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -2,6 +2,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #333;
+}
+.home-header {
+    margin-top: 20px;
+}
+.home-input {
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 4px;
+    margin-top: 10px;
 }
 
 .city-btn {
@@ -14,6 +24,6 @@
 }
 
 .city-btn:hover{
-    background-color: rgb(132, 130, 238);
-    color: white;
+    background-color: #f2f7ff;
+    color: #333;
 }
