--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,29 +1,40 @@
 .home {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #333;
 }
 .home-header {
-    margin-top: 20px;
+  margin-top: 40px;
 }
 .home-input {
-    padding: 10px;
-    border: 1px solid black;
-    border-radius: 4px;
-    margin-top: 10px;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 4px;
+  margin-top: 10px;
+  top: 200px;
+}
+.btn-containers {
+  position: fixed;
+  top: 180px;
+  border-radius: 8px;
 }
 
 .city-btn {
-    border: none;
-    padding: 10px;
-    width: 200px; 
-    cursor: pointer; 
-    
-    transition: 0.3s all;
+  top: 400px;
+  border: none;
+  padding: 10px;
+  width: 200px;
+  cursor: pointer;
+
+  transition: 0.3s all;
 }
 
-.city-btn:hover{
-    background-color: #f2f7ff;
-    color: #333;
+.city-btn:hover {
+  background-color: #0054ff;
+  color: white;
+}
+
+.options {
+  position: relative;
 }
