--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -10,3 +10,9 @@ footer {
   text-align: center;
   justify-content: center;
 }
+
+@media (max-width: 650px) {
+  footer {
+    position: unset;
+  }
+}
